--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_core: ^2.21.0
   firebase_auth: ^4.12.1
   email_validator: ^2.1.17
+  pedantic_mono: ^1.24.0+1
 
 dev_dependencies:
   flutter_test:
